--- a/Menu/Menu.css
+++ b/Menu/Menu.css
@@ -5,16 +5,17 @@
 }
 
 .menu {
+  display: none;
   position: fixed;
   top: 75px;
-  left: -350px;
+  left: 0;
   width: 350px;
-  height: 100vh;
+  height: 100vh; /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
   border: 1px solid #004D40;
   border-left: none;
   border-bottom: none;
-  z-index: 2;
+  z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
 
 .menu ul li{
@@ -25,5 +26,5 @@
 }
 
 .menu--open {
-  left: 0;
+  display: block;
 }
