--- a/Header/Header.less
+++ b/Header/Header.less
@@ -9,9 +9,9 @@
   position: fixed;
   top: 0;
   z-index: 2;
-}
 
-.header h1 {
-  margin: 0;
-  font-size: 48px;
+  h1 {
+    margin: 0;
+    font-size: 48px;
+  }
 }
