--- a/LESS/index.less
+++ b/LESS/index.less
@@ -3,7 +3,7 @@
 
 /* Below this line is where you will start your work */
 /* It is important to note, you will not be writing any CSS in this file*/
-@import './Header/Header.css';
+@import '../Header/Header.less';
 
 html, body {
   margin: 0;
